--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rickandmorty-react-test",
   "version": "0.1.0",
-  "homepage": "http://petersonby.github.io/rickandmorty-react-test",
+  "homepage": "https://petersonby.github.io/rickandmorty-react-test",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
@@ -21,6 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
